@@ -1699,6 +1699,14 @@ CREATE DATABASE,ALTER DATABASE,DROP DATABASE</pre>
         </ul>
         Default is old behavior so input.</dd>
 
+    <dt id="cfg_MinSizeForInputField">$cfg['MinSizeForInputField'] integer</dt>
+    <dd>Defines the minimum size for input fields generated for CHAR and
+        VARCHAR columns.</dd>
+
+    <dt id="cfg_MaxSizeForInputField">$cfg['MaxSizeForInputField'] integer</dt>
+    <dd>Defines the maximum size for input fields generated for CHAR and
+        VARCHAR columns.</dd>
+
     <dt id="cfg_InsertRows">$cfg['InsertRows'] integer</dt>
     <dd>Defines the maximum number of concurrent entries for the Insert page.</dd>
 
