@@ -53,6 +53,7 @@ phpMyAdmin - ChangeLog
 - bug #3299486 [prettyprint] Order By in a query containing comment character
 - [interface] Improved ENUM/SET editor
 + patch #3428376 [pmadb] pmadb on a different MySQL server
++ patch #3410688 [interface] Improving field size for character columns
 
 3.4.8.0 (not yet released)
 - bug #3425230 [interface] enum data split at space char (more space to edit)
